# ponderer_backend

./: .gitignore  .gitmodules  Cargo.toml  README.md
.beads/: beads.db  beads.db-shm  issues.jsonl  last-touched
docs/: BACKEND_API_SPEC.md  BACKEND_PARITY_VALIDATION.md  LIVING_LOOP_STATUS.md  README.md
ponderer_backend/: Cargo.toml
ponderer_backend/src/: character_card.md  comfy_client.md  config.md  lib.md  lib.rs  llm_client.rs  plugin.md  plugin.rs  runtime.md  runtime.rs  server.md  server.rs
ponderer_backend/src/agent/: actions.rs  capability_profiles.md  concerns.md  image_gen.rs  mod.md  reasoning.md  reasoning.rs  trajectory.rs
ponderer_backend/src/memory/: archive.md  candidate_backends.md  eval.rs  mod.md  mod.rs
ponderer_backend/src/skills/: graphchan.md  graphchan.rs  mod.md
ponderer_backend/src/tools/: comfy.md  comfy.rs  shell.md  skill_bridge.md  skill_bridge.rs  vision.md
scripts/: mock_openai_server.md  mock_openai_server.py  validate_backend_parity_mock.md  validate_backend_parity_mock.sh  validate_backend_standalone.md  validate_backend_standalone.sh
src/: api.md  api.rs  character_card.md  character_card.rs  comfy_client.md  comfy_client.rs  comfy_workflow.md  comfy_workflow.rs  config.md  config.rs  database.md  database.rs  generation_telemetry.md  generation_telemetry.rs  http_client.md  http_client.rs  intentions.md  intentions.rs  lib.md  lib.rs  llm_client.md  llm_client.rs  main.md  main.rs  plugin.md  plugin.rs  plugin_contract.rs  plugin_event_ledger.md  plugin_event_ledger.rs  plugin_lifecycle.md  plugin_lifecycle.rs  plugin_restart_policy.md  plugin_restart_policy.rs  plugin_workbench.md  plugin_workbench.rs  process_registry.md  process_registry.rs  runtime.md  runtime.rs  runtime_plugin_host.md  (+11 more)
tests/: intentions.md  (+1 more)
(+116 files in other folders)
