[package]
name = "ponderer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# UI
eframe = "0.29"
egui = "0.29"
rfd = "0.15"

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Channels
flume = "0.11"

# Directories
dirs = "5.0"

# Image processing for character cards
image = "0.25"
base64 = "0.22"

# Database for agent memory and persona tracking
rusqlite = { version = "0.30", features = ["bundled"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Async trait support for skills
async-trait = "0.1"

[[bin]]
name = "ponderer"
path = "src/main.rs"
