[package]
name = "ponderer_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
flume = "0.11"
image = "0.25"
base64 = "0.22"
rusqlite = { version = "0.30", features = ["bundled"] }
uuid = { version = "1.0", features = ["v4"] }
async-trait = "0.1"
regex-lite = "0.1"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.25"
